<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jr.taller.Principal">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrodepersonas"
            tools:text="@string/registrodepersonas" />

        <EditText
            android:id="@+id/txtPrimerNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/primerNombre"
            android:inputType="textPersonName"
            android:text="@string/primerNombre" />

        <EditText
            android:id="@+id/txtSegundoNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/segundoNombre"
            android:inputType="textPersonName"
            android:text="@string/segundoNombre" />

        <EditText
            android:id="@+id/txtPrimerApellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/primerApellido"
            android:inputType="textPersonName"
            android:text="@string/primerApellido" />

        <EditText
            android:id="@+id/txtSegundoApellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/segundoApellido"
            android:inputType="textPersonName"
            android:text="@string/segundoApellido" />

        <EditText
            android:id="@+id/txtEdad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edad"
            android:inputType="textPersonName"
            android:text="@string/edad" />

        <EditText
            android:id="@+id/txtSexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/sexo"
            android:inputType="textPersonName"
            android:text="@string/sexo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSaludar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.19"
                android:text="@string/mostrar" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.19"
                android:text="@string/borrar" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
